[MOD] Few fixes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Watch - Empty Cup Task2</title>
+    <style>
+        canvas {
+            border-color: red;
+            -webkit-transform:rotate(260deg);
+            -moz-transform:rotate(260deg);
+            transform:rotate(260deg);
+        }
+    </style>
 </head>
 
 <body>
